examples/bad/no_return.mtch
int f() {
    int x = 5;
    int c = 9;
}

int main() {
    return 0;
}